assets/css/user-page.css
/*@media (prefers-color-scheme: dark) {*/
/*    --banner-gradient-light: linear-gradient(#e66465, #9198e5);*/
/*}*/
:root {
  --gradient-1: light-dark(var(--clr-fg-2), var(--clr-bg-1));
  --gradient-2: light-dark(
    rgb(from var(--clr-fg-2) r g b / 0.98),
    rgb(from var(--clr-bg-1) r g b / 0.98)
  );
  --gradient-3: light-dark(
    rgb(from var(--clr-fg-2) r g b / 0.9),
    rgb(from var(--clr-bg-1) r g b / 0.9)
  );
  --gradient-4: light-dark(
    rgb(from var(--clr-fg-2) r g b / 0.7),
    rgb(from var(--clr-bg-1) r g b / 0.7)
  );
  --gradient-5: light-dark(
    rgb(from var(--clr-fg-2) r g b / 0.5),
    rgb(from var(--clr-bg-1) r g b / 0.5)
  );
  --gradient-6: light-dark(
    rgb(from var(--clr-fg-2) r g b / 0),
    rgb(from var(--clr-bg-1) r g b / 0)
  );
  --banner-gradient:
    linear-gradient(
      0deg,
      var(--gradient-1) 0%,
      var(--gradient-2) 10%,
      var(--gradient-3) 20%,
      var(--gradient-4) 30%,
      var(--gradient-5) 50%,
      var(--gradient-6) 71.6%
    ),
    var(--gradient-6) 90% / cover no-repeat;
}

#user-page {
  /*position: relative;*/
  width: 100%;
  display: none;
  padding: 0;
  flex-direction: column;
  align-items: flex-start;
  gap: 2.4rem;
  flex: 1 0 0;
  align-self: stretch;

  &.active-feed {
    display: flex;
    opacity: 1;
  }
}

.user-name {
  background: var(--clr-dark--2);
  opacity: 0.7;
  border-radius: var(--btn-radius);
  width: fit-content;
}

.collapsible-collapsed {
  height: 0;
  padding: 0 !important;
  /*display: none;*/
  overflow: hidden;
  transition: height 400ms ease-in-out;
}
.collapsible-expanded {
  /*height: calc(100% - 30rem - 4.8rem);*/
  padding-bottom: 6rem;
}

.banner,
.banner-user {
  position: relative;
  width: 100%;
  min-height: 20rem;
  overflow: hidden;
  z-index: var(--z-index-banner);
  &::before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: var(--banner-gradient);
    z-index: calc(var(--z-index-banner) + 2);
  }
  & .page-banner {
    width: 100%;
    height: 20rem;
    object-fit: cover;
    z-index: calc(var(--z-index-banner) + 1);
  }
}

.banner-user {
  min-height: 16rem;
}

.page-control,
.page-control-user {
  display: flex;
  justify-content: space-between;
  width: calc(100% - 9.6rem);
  z-index: var(--z-index-page-control);
  position: absolute;
  top: 50%;
  left: 4.8rem;

  & .page-buttons {
    display: flex;
    width: 100%;
    justify-content: right;
    align-items: center;
  }

  & .page-profile {
    /*z-index: 999;*/
    & .page-profile-pic {
      width: 8rem;
      height: 8rem;
      flex-shrink: 0;
      border-radius: 8rem;
      background: url(/assets/images/profile.png) lightgray 50% / cover
        no-repeat;
    }

    & h2 {
      overflow: hidden;
      width: calc-size(fit-content, size + 4.8rem);
      color: var(--clr-fg-1);
      text-transform: capitalize;
      word-spacing: -2rem;
      text-overflow: ellipsis;
      font-style: normal;
      font-weight: 700;
      line-height: normal;
    }
  }
}
.page-control-user {
  top: 13%;
}

.green {
  background: limegreen;
}

#user-activity-feeds {
  height: 100%;
  width: 100%;
  & > * {
    width: 100%;
    height: 100%;
    & > * {
      width: 100%;
    }
  }
}
.hide-feed,
.hide {
  display: none !important;
}

#drop-zone--user-image {
  display: none;
  &.editing {
    display: flex;
  }
}

/* username displayed by default, before editing */
[id$="-name-content"] {
  display: flex;
  min-height: 2.4rem;
  margin-block: 0.4rem 0;
  &.editing {
    display: none;
  }
}

/*text input, when editing name */
[id$="-name-input"] {
  display: none;
  min-height: 2.4rem;
  margin-block: 0.4rem 0;
  width: 100%;
  &.editing {
    display: flex;
  }
}

[id$="-name-label"] {
  display: none;
  &.editing {
    display: block;
  }
}

[id$="-bio-content"] {
  padding: 0.8rem 1.2rem;
  display: flex;
  overflow-y: scroll;
  white-space: pre-wrap;
  max-height: 30.4rem;
  margin-block: 0.4rem 0;
  &.editing {
    display: none;
  }
}

[id$="-bio-input"] {
  resize: none;
  min-width: 100%;
  min-height: 5rem;
  max-height: 30.4rem;
  display: none;
  padding: 0.8rem 1.2rem;
  margin-block: 0.4rem 0;
  overflow-y: scroll;

  &.editing {
    display: flex;
  }
}

